--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <canvas id="game" width="640" height="400" class=""></canvas>
+    <canvas id="game" width="640" height="400" class="content"></canvas>
 
     <script src="assets/web/jquery-1.11.2.js" type="text/javascript"></script>
     <script src="build/bitsmashers.min.js" type="text/javascript"></script>
