--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div id="matchmaking" class="content hud">
+        <h1>Matchmaking</h1>
+    </div>
+
     <canvas id="game" width="640" height="480" class="content"></canvas>
 
     <script src="assets/web/jquery-1.11.2.js" type="text/javascript"></script>
