--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <canvas id="game" width="640" height="480" class="content"></canvas>
 
+    <div id="burningtomato" class="hide">
+        <img src="assets/images/burningtomato.gif" />
+        <h1>www.burningtomato.com</h1>
+    </div>
+
     <script src="assets/web/jquery-1.11.2.js" type="text/javascript"></script>
     <script src="build/bitsmashers.min.js" type="text/javascript"></script>
 
