[UI, Network] Add new network code wrapper. Add basic main menu UI.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div id="matchmaking" class="content hud">
+    <div id="matchmaking" class="content hud hide">
         <h1>Matchmaking</h1>
     </div>
 
@@ -18,6 +18,26 @@
     <div id="burningtomato" class="hide">
         <img src="assets/images/burningtomato.gif" />
         <h1>www.burningtomato.com</h1>
+    </div>
+
+    <div id="mainmenu" class="content hud hide">
+        <div class="video-texture" style="opacity: 1;"></div>
+        <!--<img class="background-video" /> Would be cool to have a bg video here -->
+        <div class="content">
+            <h1>Bitsmashers</h1>
+            <h2>The multiplayer pixel-throwing game.</h2>
+
+            <div class="section">
+                <div class="connecting">Connecting to matchmaking server...</div>
+
+                <div class="options hide">
+                    <div class="opt active">Host a game</div>
+                    <div class="opt">Join a game</div>
+                    <br />
+                    <div class="opt">Single player</div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="assets/web/jquery-1.11.2.js" type="text/javascript"></script>
