[UI] MainMenu: Implement activating a menu option with SPACE/ENTER.  Add an "easter egg" for the likely outcome of the single player implementation.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="connecting">Connecting to matchmaking server...</div>
 
                 <div class="options hide">
-                    <div class="opt active">Host a game</div>
-                    <div class="opt">Join a game</div>
+                    <div class="opt active o1">Host a game</div>
+                    <div class="opt o2">Join a game</div>
                     <br />
-                    <div class="opt">Single player</div>
+                    <div class="opt o3">Single player</div>
                 </div>
             </div>
         </div>
