--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
 
     <script src="assets/web/jquery-1.11.2.js" type="text/javascript"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.3.js" type="text/javascript"></script>
     <script src="build/bitsmashers.min.js" type="text/javascript"></script>
 
 </body>
