[Net, UI] Add "cancel" button when trying to join or host a game

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 <div class="connecting">Connecting to matchmaking server...</div>
 
                 <div class="options hide">
-                    <div class="opt active o1">Host a game</div>
-                    <div class="opt o2">Join a game</div>
+                    <div class="opt secondary o0">Cancel</div>
+                    <div class="opt primary active o1">Host a game</div>
+                    <div class="opt primary o2">Join a game</div>
                     <br />
-                    <div class="opt o3">Single player</div>
+                    <div class="opt primary o3">Single player</div>
                 </div>
             </div>
         </div>
