[Net, UI] Add stub for basic lobby UI

--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
                     <br />
                     <div class="opt primary o3">Single player</div>
                 </div>
+
+                <div class="lobby">
+                    <div class="player p1">
+                        <h2>Player 1</h2>
+                        <h4>Searching...</h4>
+                    </div>
+                    <div class="player p2">
+                        <h2>Player 2</h2>
+                        <h4>Searching...</h4>
+                    </div>
+                    <div class="player p3">
+                        <h2>Player 3</h2>
+                        <h4>Searching...</h4>
+                    </div>
+                    <div class="player p4">
+                        <h2>Player 4</h2>
+                        <h4>Searching...</h4>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
