--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                 <div class="connecting">Connecting to matchmaking server...</div>
 
                 <div class="options hide">
-                    <div class="opt secondary o0">Cancel</div>
-                    <div class="opt primary active o1">Host a game</div>
-                    <div class="opt primary o2">Join a game</div>
+                    <div class="opt secondary o0">Start game</div>
+                    <div class="opt secondary o1">Cancel</div>
+                    <div class="opt primary active o2">Host a game</div>
+                    <div class="opt primary o3">Join a game</div>
                     <br />
-                    <div class="opt primary o3">Single player</div>
+                    <div class="opt primary o4">Single player</div>
                 </div>
 
                 <div class="lobby">
