--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <h1>www.burningtomato.com</h1>
     </div>
 
+    <div id="go" class="content hide">
+        <h1>Go!</h1>
+    </div>
+
     <div id="mainmenu" class="content hud hide">
         <div class="video-texture" style="opacity: 1;"></div>
         <!--<img class="background-video" /> Would be cool to have a bg video here -->
