--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <h1>Go!</h1>
     </div>
 
+    <div id="uded" class="content hide">
+        <h1>You died!</h1>
+    </div>
+
+    <div id="log" class="">
+
+    </div>
+
     <div id="mainmenu" class="content hud hide">
         <div class="video-texture" style="opacity: 1;"></div>
         <!--<img class="background-video" /> Would be cool to have a bg video here -->
