[Game] Release configuration

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2>The multiplayer pixel-throwing game.</h2>
 
             <div class="section">
-                <div class="connecting">Connecting to matchmaking server...</div>
+                <div class="connecting">...</div>
 
                 <div class="options hide">
                     <div class="opt secondary o0">Start game</div>
