Debug entity count

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     </div>
 
+    <div id="debug">
+        ...
+    </div>
+
     <div id="mainmenu" class="content hud hide">
         <div class="video-texture" style="opacity: 1;"></div>
         <!--<img class="background-video" /> Would be cool to have a bg video here -->
