Stub out round management / basic game flow

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h1>www.burningtomato.com</h1>
     </div>
 
-    <div id="go" class="content hide">
-        <h1>Go!</h1>
-    </div>
+    <h1 id="go" class="content hide">
+        ...
+    </h1>
 
     <div id="uded" class="content hide">
         <h1>You died!</h1>
@@ -33,7 +33,51 @@
     </div>
 
     <div id="debug">
-        ...
+
+    </div>
+
+    <div id="scoreboard">
+        <table>
+            <thead>
+                <tr>
+                    <th>Player</th>
+                    <th>Fighter</th>
+                    <th>Kills</th>
+                    <th>Deaths</th>
+                    <th>Wins</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td style="color: red;">Player 1</td>
+                    <td>The Doctor</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td style="color: yellow;">Player 2</td>
+                    <td>The Doctor</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td style="color: lightblue;">Player 3</td>
+                    <td>The Doctor</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td style="color: lightgreen;">Player 4</td>
+                    <td>The Doctor</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <div id="mainmenu" class="content hud hide">
