Implement end-of-round scoreboard

--- a/index.html
+++ b/index.html
@@ -45,33 +45,38 @@
                     <th>Kills</th>
                     <th>Deaths</th>
                     <th>Wins</th>
+                    <th>Score</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td style="color: red;">Player 1</td>
-                    <td>The Doctor</td>
+                    <td>Player</td>
+                    <td>???</td>
                     <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td style="color: yellow;">Player 2</td>
-                    <td>The Doctor</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr>
-                    <td style="color: lightblue;">Player 3</td>
-                    <td>The Doctor</td>
+                    <td>Player</td>
+                    <td>???</td>
+                    <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
                 <tr>
-                    <td style="color: lightgreen;">Player 4</td>
-                    <td>The Doctor</td>
+                    <td>Player</td>
+                    <td>???</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>Player</td>
+                    <td>???</td>
+                    <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
